Fix modal on small screen

--- a/src/common/components/Questions/Questions.module.styl
+++ b/src/common/components/Questions/Questions.module.styl
@@ -71,13 +71,14 @@
     
     @media (max-width $md)
         height: 100%
+        min-height 500px
         max-width: none
-        
+
         top: 0
         
         margin: 0
         padding: 0
-        
+
         :global(.ant-modal-content)
             border-radius: 0
             height: 100%
