--- a/src/common/components/Questions/Success.module.styl
+++ b/src/common/components/Questions/Success.module.styl
@@ -37,6 +37,7 @@
 
 .nowrap
     white-space nowrap
+    padding 0 4px
     
 .badge
     margin: 0
